<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="62dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/GSSSgreen"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="261dp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/GSSSgreen"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="354dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emailPrompt"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/passwordPrompt"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="352dp" />

</androidx.constraintlayout.widget.ConstraintLayout>