<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-136dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="162dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginEnd="177dp"
                android:layout_marginBottom="53dp"
                android:text="TextView"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="261dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/GSSSgreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/GSSSgreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5"
                app:layout_constraintTop_toBottomOf="@+id/edit_email" />

            <TextView
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="103dp"
                android:layout_height="44dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="262dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emailPrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="137dp"
                android:layout_height="47dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="46dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/passwordPrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>